# Moira

./: CMakeLists.txt  PLAN-040.md  PLAN-FPU.md  README.md
.github/workflows/: cmake-multi-platform.yml
Moira/: CMakeLists.txt  Moira.cpp  Moira.h  MoiraCache040.cpp  MoiraCache040.h  MoiraExceptions.h  MoiraExceptions_cpp.h  MoiraExecFPU_cpp.h  MoiraExecMMU_cpp.h  MoiraExec_cpp.h  MoiraFPU.cpp  MoiraFPU.h  MoiraFPUTranscendental.cpp  MoiraInit.h  MoiraMMU040.cpp  MoiraMMU040.h  MoiraMem040.cpp  MoiraTypes.h
Moira/softfloat/: platform.h  softfloat.cpp
Tests/: AdvancedTests.cpp  ComprehensiveTests.cpp  EdgeCaseTests.cpp  FPUTests.cpp  Test_FPU_040_EdgeCases.cpp  Test_FPU_040_Functional.cpp  Test_FPU_GoldenVectors.cpp
